Starting to experiment with generic rational classes for vector/point coordinates. Simple experiment suggest substituting Double for double doesn't add significant overhead.